tests/baselines/reference/duplicatePropertiesInTypeAssertions02.errors.txt
duplicatePropertiesInTypeAssertions02.ts(1,16): error TS2300: Duplicate identifier 'a'.
duplicatePropertiesInTypeAssertions02.ts(1,27): error TS2300: Duplicate identifier 'a'.


==== duplicatePropertiesInTypeAssertions02.ts (2 errors) ====
    let x = {} as {a: number; a: number};
                   ~
!!! error TS2300: Duplicate identifier 'a'.
                              ~
!!! error TS2300: Duplicate identifier 'a'.